--- a/src/styles.css
+++ b/src/styles.css
@@ -108,17 +108,21 @@ li:nth-of-type(1n+12) {
 }
 
 .js-darkmode{
-    width:100px;
-    height:40px;
+    width:60px;
+    height:30px;
     background-color: none;
     border: none;
     text-align: center;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 10px;
     color: white;
     margin: 4px;
     cursor: pointer;
     border-radius: 10px;
+    position:absolute;
+    position:fixed;
+    left: 30px;
+    bottom:30px;
 }
 
 @keyframes fadeIn {
